<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="record_note">Recorded files</string>
    <string name="no_recorder">No recorded files</string>
    <string name="new_recorder">New recording</string>

    <string name="new_recorder_xliff">New recording %d</string>
    <string name="select_item_xliff">%d selected</string>
    <string name="call_record_count_xliff">(%d)</string>
    <string name="call_record_filename_xliff">(%d)</string>

    <string name="input_new_recorder_name">Enter name for new recording</string>
    <string name="edit_recorder_name">Edit file name</string>
    <string name="no_change_recordname">Name unedited</string>
    <string name="share">Share</string>
    <string name="record_files">Recording file</string>
    <string name="record">Record</string>
    <string name="pause_record">Pause</string>
    <string name="continue_record">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="select_all">Select all</string>
    <string name="select_none">Deselect all</string>

    <string name="play">Play</string>
    <string name="pause_play">Pause</string>
    <string name="edit">Edit</string>
    <string name="choose">Select</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="delete">Delete</string>
    <string name="rename">Edit</string>
    <string name="app_name">Recorder</string>
    <string name="record_file_name_format">Recording-MMddyy-HH-mm-ss</string>
    <string name="start_time_format">MM-dd-yyyy</string>

    <string name="recording">Recording...</string>
    <string name="saving_record">Saving...</string>
    <string name="record_over_max_time">Recording exceeds 1 hour</string>
    <string name="record_name_cannot_null">File name cannot be blank</string>
    <string name="record_existed">File name already exists</string>

    <string name="storage_full">Storage is full</string>

    <string name="record_paused">Recording paused</string>

    <string name="delete_record_dialog_title">Delete %d file(s)?</string>
    <string name="please_select_reoord">Please select</string>

    <string name="create_file_fail">Name is too long or contains special characters</string>

    <string name="audio_db_artist_name">Your recordings</string>
    <string name="audio_db_album_name">Recordings</string>

    <!-- setting -->
    <string name="play_mode_title">Earpiece mode</string>
    <string name="play_mode_summary">Play recordings through earpiece speaker when enabled</string>
    <string name="screen_widget_title">Lock screen widget when recording</string>
    <string name="screen_widget_summary">Show recording widget when screen is locked</string>
    <string name="record_silence_title">Silence ringer while recording</string>
    <string name="scene_title">Scene settings</string>
    <string name="audio_qulity_title">Audio quality</string>
    <string name="voice_recording">Recorded calls</string>

    <string name="play_record_playing">Playing</string>
    <string name="play_record_pause">Paused</string>
    <string name="ready_record">Ready</string>
    <string name="record_error">Recording error</string>
    <string name="record_exception">Error launching recorder</string>
    <string name="app_keyword_call_record">Unable to modify app ID</string>
    <string name="play_record_error">Error launching player</string>

    <string-array name="scene_entries">
        <item>Record voice</item>
        <item>Record music</item>
    </string-array>

    <string-array name="scene_entries_value">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="audio_qulity_entries">
        <item>High</item>
        <item>Standard</item>
        <item>Low</item>
    </string-array>
    <string-array name="audio_qulity_entries_des">
        <item>High quality saved as AMR</item>
        <item>Standard quality saved as AMR</item>
        <item>Low quality saved as AMR</item>
    </string-array>
    <string-array name="audio_qulity_value">
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>
    <string name="no_selected_share">No recordings selected</string>
    <string name="yesterday">Yesterday</string>
    <string name="few_days"> days ago</string>
    <string name="before_yesterday">Two days ago</string>
    <string name="week_ago">1 week ago</string>
    <string name="app_detail_sys_set">App info</string>
</resources>